--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -1,3 +1,18 @@
-body {
-    display: flex
+:root {
+ --maintheme-color: #290012;
+ --secondarytheme-color: #A75E39;
+
 }
+
+* {
+    box-sizing: border-box;
+  }
+  
+  body {
+    font-family: Arial;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    justify-content: flex-start;
+  }
