--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -1,7 +1,6 @@
 :root {
  --maintheme-color: #290012;
  --secondarytheme-color: #A75E39;
-
 }
 
 * {
@@ -9,10 +8,25 @@
   }
   
   body {
-    font-family: Arial;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     margin: 0;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
     justify-content: flex-start;
+  }
+
+  header {
+    background-color: var(--maintheme-color);
+    height: 200px;
+  }
+
+  header h3 {
+    color: #fff;
+    font-weight: bold;
+    font-size: xx-large;
+  }
+
+  header ul li {
+
   }
