--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -1,6 +1,6 @@
 :root {
  --maintheme-color: #290012;
- --secondarytheme-color: #A75E39;
+ --secondarytheme-color: #985534;
 }
 
 * {
@@ -18,15 +18,51 @@
 
   header {
     background-color: var(--maintheme-color);
-    height: 200px;
+    height: 50%;
+    border-bottom: 10px solid var(--secondarytheme-color);
+    
   }
 
-  header h3 {
+  header h1 {
     color: #fff;
     font-weight: bold;
     font-size: xx-large;
+    text-align: right;
+    margin: 1% 2% 0 0;
   }
 
-  header ul li {
-
+  header nav ul {
+    text-align: right;
+    list-style: none;
+    margin: 2% 2% 2% 0;
   }
+
+  header nav ul li {
+    display: inline-block;
+    color: #fff;
+    font-weight: 700;
+    padding-right: 1%;
+  }
+
+  main {
+    height: 
+  }
+  #about {
+    justify-content: flex-start;
+    height: 100%;
+    width: 25%;
+    border: 10px solid #497063;
+  }
+
+  @media screen and (max-width: 992px) {
+   .card {
+    width: 50%
+   }
+  }
+  
+  @media screen and (max-width: 768px) {
+    .card {
+      width: 100%
+    }
+  }
+  
