--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -20,7 +20,6 @@
     background-color: var(--maintheme-color);
     height: 50%;
     border-bottom: 10px solid var(--secondarytheme-color);
-    
   }
 
   header h1 {
@@ -35,6 +34,7 @@
     text-align: right;
     list-style: none;
     margin: 2% 2% 2% 0;
+    
   }
 
   header nav ul li {
@@ -44,20 +44,41 @@
     padding-right: 1%;
   }
 
+  header nav a {
+    color: #fff;
+    text-decoration: none;
+    text-transform: lowercase;
+  }
+
   a:hover {
     text-decoration: none;
     color: var(--secondarytheme-color);
   }
+
   a:visited {
-    text-decoration: none;
+    text-decoration: underline;
     color: var(--secondarytheme-color);
   }
   
+  aside {
+    float: left;
+    width: 100%;
+    position: relative;
+  }
+
+  img {
+    display: block;
+    height: 20%;
+    width: 20%;
+    position: top;
+
+  }
 
   main {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-around;
+    display: flex;
+    flex-wrap: wrap;      
+    justify-content: space-around;
+    float: right;
     }
     
     section {
