--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -67,13 +67,14 @@
   .hero-image {
     height: 500px;
     width: 100%;
-    margin-bottom: 25px;
+    margin-bottom: .25%;
     background-image: url("../images/SpainLove.png");
     background-size: cover;
     background-position: center;
 }
   
   aside {
+    box-sizing: border-box;
     float: left;
     width: 100%
   }
