--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -1,6 +1,7 @@
 :root {
  --maintheme-color: #290012;
  --secondarytheme-color: #985534;
+ --thirdtheme-color: #f6f7eb;
 }
 
 * {
@@ -13,7 +14,6 @@
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    justify-content: flex-start;
   }
 
   body a {
@@ -37,11 +37,11 @@
   }
 
   header h1 {
-    color: #f6f7eb;
+    color: var(--thirdtheme-color);
     font-weight: bold;
-    font-size: xx-large;
-    text-align: right;
-    margin: 1% 2% 0 0;
+    font-size: 300%;
+    text-align: left;
+    margin: 1% 2% 0 1%;
   }
 
   header nav ul {
@@ -53,13 +53,13 @@
 
   header nav ul li {
     display: inline-block;
-    color: #f6f7eb;
+    color: var(--thirdtheme-color);
     font-weight: 700;
     padding-right: 1%;
   }
 
   header nav a {
-    color: #fff;
+    color: var(--thirdtheme-color);
     text-decoration: none;
     text-transform: lowercase;
   }
@@ -75,16 +75,20 @@
   
   aside {
     box-sizing: border-box;
-    float: left;
-    width: 100%
+    float: center;
+    width: 100%;
+    position: relative;
+  }
+
+  aside h2 {
+    position: absolute;
+    justify-content: center;
   }
 
   img {
     display: block;
     height: 20%;
     width: 20%;
-    position: top;
-
   }
 
   main {
@@ -95,7 +99,7 @@
     
     section {
       display: flex;
-      background-color: #f6f7eb;
+      background-color: var(--thirdtheme-color);
       padding: 20px;
       border: 10px solid #487063;
       margin: 2%;
