--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -106,6 +106,7 @@
       padding: 20px;
       border: 10px solid #487063;
       margin: 2%;
+      position: relative;
     }
 
     main section h2 {
@@ -124,20 +125,19 @@
       width: 50%
     }
 
-    .first-project {
-      position: relative;
-    }
-
-    #horiseon-refactor {
-      height: 20%;
-      width: 20%
-
+    main h3 {
+      background-color: #f6f7eb;
+      color: var(--maintheme-color);
+      
     }
     
-
-    #resume {
-      float: right;
-      width: 50%;
+    
+    .first-project {
+      position: absolute;
+      margin-bottom: .25%;
+      background-image: url("../images/digital-marketing-meeting.jpg");
+      background-size: cover;
+      background-position: left;
     }
   
   footer {
