Reconfigure of Nav to be outside header element and adjustment of style sheet to match

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -6,57 +6,55 @@
 
 * {
     box-sizing: border-box;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   }
   
   body {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     margin: 0;
-    display: flex;
-    flex-direction: column;
     min-height: 100vh;
   }
 
   body a {
     text-decoration: none;
-    color: var(--secondarytheme-color);
+    color: var(--maintheme-color);
   }
 
   body a:visited {
     text-decoration: underline;
-    color: var(--secondarytheme-color);
+    color: var(--maintheme-color);
   }
 
   header {
     background-color: var(--maintheme-color);
     height: 50%;
-    border-bottom: 10px solid var(--secondarytheme-color);
   }
 
   header h1 {
     color: var(--thirdtheme-color);
     font-weight: bold;
-    font-size: 250%;
+    font-size: 200%;
     text-align: left;
-    margin: 1% 2% 0 1%;
+    padding: 1%;
+    margin: 0;
   }
 
-  header nav ul {
+  nav {
+    background-color: var(--secondarytheme-color);
+    height: 30%
+  }
+  nav ul {
+    color: var(--maintheme-color);
     text-align: right;
     list-style: none;
-    margin: 2% 2% 2% 0;
+    margin: 0;
   }
 
-  header nav ul li {
+  nav ul li {
     display: inline-block;
     color: var(--thirdtheme-color);
     font-weight: 700;
-    padding-right: 1%;
-  }
-
-  header nav a {
-    color: var(--thirdtheme-color);
-    text-decoration: none;
     text-transform: lowercase;
+    padding: 1%;
   }
 
   .hero-image {
@@ -67,24 +65,29 @@
     background-size: cover;
     background-position: center;
 }
-  
   aside {
-    background-color: var(--thirdtheme-color);
-    padding: 1%;
-    border: 10px solid #487063;
-    margin: 2%;
+    display: flex;
+    flex: 30%;
   }
+  aside section {
+      display: flex;
+      flex-wrap: wrap;
+      width: 50%;
+      background-color: var(--thirdtheme-color);
+      padding: 20px;
+      border: 10px solid #487063;
+      margin: 2%;
+    }
 
   aside h2 {
+    flex-direction: column;
     text-align: center;
     color: var(--maintheme-color);
     text-decoration: underline solid var(--secondarytheme-color);
   }
 
   aside p {
-    display: flex;
-    flex-wrap: wrap;
-    text-align: left;
+    text-align: center;
   }
 
   aside img {
