--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -111,7 +111,7 @@ header {
     main section {
       display: inline-block;
       width: 100%;
-      height: 500px;
+      height: 100rem;
       background-color: var(--thirdtheme-color);
       padding: 20px;
       border: 10px solid #487063;
@@ -130,12 +130,8 @@ header {
       text-align: center;
     }
 
-    main section #work {
-      float: left;
-      width: 50%
-    }
-
     main h3 {
+      width: 20rem;
       background-color: #f6f7eb;
       color: var(--maintheme-color);
       
@@ -143,13 +139,12 @@ header {
     
     .first-project {
       position: absolute;
-      left: 40%;
-      bottom: 50%;
+      left: 30%;
       margin-bottom: .25%;
       background-image: url("../images/digital-marketing-meeting.jpg");
-      height: 75%;
-      width: 40%;
-      background-size: contain;
+      height: 20rem;
+      width: 30rem;
+      border-radius: 10%;
     }
   
   footer {
