--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -10,6 +10,7 @@
   
 body {
   width: 100%;
+  height: auto;
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
   min-height: 100vh;
@@ -131,20 +132,30 @@ header {
     }
 
     main h3 {
-      width: 20rem;
+      justify-content: flex-end;
       background-color: #f6f7eb;
       color: var(--maintheme-color);
-      
+      width: fit-content;
+      padding: 1%;
     }
+
+    main a:visited {
+      text-decoration: underline;
+      color: var(--secondarytheme-color);
+    }
+  
     
     .first-project {
       position: absolute;
-      left: 30%;
-      margin-bottom: .25%;
+      left: 35%;
       background-image: url("../images/digital-marketing-meeting.jpg");
-      height: 20rem;
-      width: 30rem;
+      height: auto;
+      max-width: 100%;
       border-radius: 10%;
+    }
+
+    .first-project::after {
+      
     }
   
   footer {
@@ -198,7 +209,16 @@ header {
     justify-content: flex-start;
     width: 100%;
   }
+
+  main section {
+    width: 100%;
+  }
+
+  .first-project {
+    justify-content: flex-end;
+  }
 }
+
 
 @media screen and (max-width: 567px) {
   body {
@@ -208,6 +228,11 @@ header {
     justify-content: flex-start;
     width: 100%;
   }
+
+  main section {
+    width: 100%;
+  }
+
 }
 
   
