--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -10,7 +10,6 @@
   
 body {
   width: 100%;
-  height: auto;
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
   min-height: 100vh;
@@ -105,38 +104,38 @@ header {
 
   main {
     display: flex;
-    flex-wrap: wrap;      
-    justify-content: space-around;
-    }
-    
-    main section {
-      display: inline-block;
-      width: 100%;
-      height: 100rem;
-      background-color: var(--thirdtheme-color);
-      padding: 20px;
-      border: 10px solid #487063;
-      margin: 2%;
-      position: relative;
+    width: 100%;       
+    height: 100rem;
+    background-color: var(--thirdtheme-color);
+    padding: 20px;
+    border: 10px solid #487063;
+    margin: 0;
+    color: var(--maintheme-color);
+    position: relative;
     }
 
-    main section h2 {
+    main h2 {
+      flex: 50%;
+      justify-content: center;
       text-align: center;
       text-decoration: underline var(--secondarytheme-color);
       font-weight: bold;
       padding-bottom: .25%;
     }
 
-    main section p {
-      text-align: center;
+    main p {
+      
     }
 
     main h3 {
-      justify-content: flex-end;
       background-color: #f6f7eb;
       color: var(--maintheme-color);
       width: fit-content;
-      padding: 1%;
+      position: inherit;
+      top: 75%;
+      left: 10px;
+      border-radius: 10rem;
+      padding: 2%;
     }
 
     main a:visited {
@@ -145,17 +144,55 @@ header {
     }
   
     
-    .first-project {
+    #first-project {
       position: absolute;
-      left: 35%;
+      left: 32.5%;
       background-image: url("../images/digital-marketing-meeting.jpg");
-      height: auto;
-      max-width: 100%;
+      height: 20rem;
+      width: 30rem;
       border-radius: 10%;
+      flex-shrink: inherit;
     }
 
-    .first-project::after {
-      
+    #second-project {
+      position: absolute;
+      top: 50%;
+      left: 32.5%;
+      background-image: url("../images/Bengal.jpg");
+      height: 20rem;
+      width: 30rem;
+      border-radius: 10%;
+      flex-shrink: inherit;
+    }
+
+    #third-project {
+      position: absolute;
+      left: 32.5%;
+      background-image: url("../images/spain_dog.jpg");
+      height: 20rem;
+      width: 30rem;
+      border-radius: 10%;
+      flex-shrink: inherit;
+    }
+
+    #fourth-project {
+      position: absolute;
+      left: 32.5%;
+      background-image: url("../images/obi.jpg");
+      height: 20rem;
+      width: 30rem;
+      border-radius: 10%;
+      flex-shrink: inherit;
+    }
+
+    #fifth-project {
+      position: absolute;
+      left: 32.5%;
+      background-image: url("../images/Sook.jpg");
+      height: auto;
+      width: 100%;
+      border-radius: 10%;
+      flex-shrink: inherit;
     }
   
   footer {
@@ -201,23 +238,19 @@ header {
    }
   }
   
+  @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
+    /* High density stuff here */
+  }
+
 @media screen and (max-width: 768px) {
   body {
     width: 100%;
   }
-  aside section {
-    justify-content: flex-start;
-    width: 100%;
-  }
-
-  main section {
-    width: 100%;
-  }
-
-  .first-project {
-    justify-content: flex-end;
-  }
 }
+
+  @media (-webkit-min-device-pixel-ratio: 4), (min-resolution: 192dpi) {
+    /* High density stuff here */
+  }
 
 
 @media screen and (max-width: 567px) {
@@ -235,4 +268,6 @@ header {
 
 }
 
-  
+@media (-webkit-min-device-pixel-ratio: 4), (min-resolution: 192dpi) {
+  /* High density stuff here */
+}
