--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -1,14 +1,16 @@
-/*Lays*/
+/* Laysout the colour theme for the page */
 :root {
  --maintheme-color: #290012;
  --secondarytheme-color: #985534;
  --thirdtheme-color: #f6f7eb;
 }
 
+/* Universal selectprs */
 * {
   box-sizing: border-box;
 }
   
+/* Body Selectors */
 body {
   width: 100%;
   font-family: Arial, Helvetica, sans-serif;
@@ -16,6 +18,7 @@ body {
 
 }
 
+  /* Header selectors, including text and image */
   header {
     display: flex;
     flex-direction: column;
@@ -41,6 +44,7 @@ body {
     margin: 0 -17%;
   }  
 
+  /* Navigation selectors */
   nav {
     background-color: var(--secondarytheme-color);
     height: 30%
@@ -69,6 +73,7 @@ body {
     color: var(--maintheme-color);
   }
 
+  /* Banner image selectors */
   .hero-image {
     background-image: url("../images/SpainLove.png");
     background-size: cover;
@@ -77,16 +82,8 @@ body {
     height: 30rem;
     margin-bottom: 1%;
   }
-  
-  main h2 {
-    flex: 0 0 100%;
-    justify-content: center;
-    text-align: center;
-    text-decoration: underline var(--secondarytheme-color);
-    font-weight: bold;
-    padding-bottom: .25%;
-  }
 
+  /* Main section selectors */
   main section.projects {
     display: flex;
     flex-wrap: wrap;
@@ -97,6 +94,17 @@ body {
     color: var(--maintheme-color);
   }
 
+  /* Set the rules for title */
+  main h2 {
+    flex: 0 0 100%;
+    justify-content: center;
+    text-align: center;
+    text-decoration: underline var(--secondarytheme-color);
+    font-weight: bold;
+    padding-bottom: .25%;
+  }
+
+  /*Sets the rules for all h3 in main */
   main h3 {
     background-color: var(--thirdtheme-color);
     color: var(--maintheme-color);
@@ -110,6 +118,10 @@ body {
     padding: 2%;
   }
 
+  main h3:hover {
+    box-shadow: inset 0 0 10px var(--secondarytheme-color);
+  }
+
   main div p {
     text-align: center;
     color: var(--maintheme-color);
@@ -119,6 +131,8 @@ body {
     text-decoration: underline;
     color: var(--secondarytheme-color);
   }
+
+  /* Sets the first project image as bigger than the rest. Seperated from the other cards. */
   
   #first-project {
     background-image: url("../images/digital-marketing-meeting.jpg");
@@ -128,6 +142,11 @@ body {
     margin: 2%;
   }
 
+  #first-project:hover {
+    box-shadow: inset 0 0 20px #fff;
+  }
+
+  /* Selectors of all other project cards */
   .project-card {
     height: 20rem;
     width: 23%;
@@ -135,6 +154,11 @@ body {
     margin: 1% 7%;
   }
 
+  .project-card:hover {
+    box-shadow: inset 0 0 10px #fff;
+  }
+
+  /* Sources for all project card images */
   #second-project {
     background-image: url("../images/Bengal.jpg");
   }
@@ -151,6 +175,7 @@ body {
     background-image: url("../images/Sook.jpg");
   }
 
+  /* Selectors for about me and resume elements */
   aside {
     display: flex;
   }
@@ -179,6 +204,7 @@ body {
     color: var(--secondarytheme-color);
   }
   
+  /* Selectors for footer and contact me elements */
   footer {
     background-color: var(--maintheme-color);
     height: 12rem;
@@ -216,6 +242,8 @@ body {
     text-decoration: underline;
     color: var(--secondarytheme-color);
   }
+
+/*Selectors for different aspect ratios */
 
 @media screen and (max-width: 992px) {
   body { 
