Addition of group 2 project

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -160,7 +160,7 @@ body {
 
   /* Sources for all project card images */
   #second-project {
-    background-image: url("../images/Bengal.jpg");
+    background-image: url("../images/music-fwends.jpg");
   }
 
   #third-project {
